--- a/src/index.css
+++ b/src/index.css
@@ -425,6 +425,9 @@ html .clear-completed:active {
 	text-decoration: underline;
 }
 
+.hidden {
+	display: none;
+}
 /*
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox
